tests/neg/inline-val-out-of-bounds.scala
inline val a: Byte = 500 // error
inline val b: Int = 8589934592 // error
